--- a/style.css
+++ b/style.css
@@ -1,4 +1,43 @@
+header {
+  /* display: flex;justify-content: space-between;align-items: flex-start; */
+}
+
 .button1 {
-    justify-content: flex-start;
-    width: min-content;
+  width: 100px;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+}
+
+.genius {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-right: 4%;
+}
+
+.talented {
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid darkblue;
+  width: 100%;
+}
+
+li {
+  list-style: none;
+}
+
+nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+
+
+.learner {
+  webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
