--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ nav {
   justify-content: space-between;
   border: 2px solid darkblue;
   width: 100%;
+  background: white;
 }
 
 li {
@@ -39,12 +40,10 @@ nav a {
   transform: scaleX(1);
 }
 
-
-
 .learner {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 17px;
 
   padding: 120px;
@@ -52,7 +51,7 @@ nav a {
 
 .drunk {
   display: flex;
-  align-items: center;
+  align-items: start;
   flex-direction: column;
 }
 
@@ -112,8 +111,27 @@ nav a {
 .elementparent {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 4%;
-  column-gap: 4%;
   align-content: space-evenly;
-  gap: 4%;
+  gap: 1.5%;
+  max-width: 78%;
+  width: ;
+}
+
+body {
+  background-color: lightgray;
+}
+
+h1 {
+  font-size: 60px;
+  margin: 0%;
+}
+
+h2 {
+  font-size: 35px;
+}
+
+.ahruahruahru {
+  border-radius: 10px;
+
+  border: #b5b5b5 5px solid;
 }
